--- a/src/App/style.css
+++ b/src/App/style.css
@@ -20,7 +20,7 @@
 }
 
 .bg{
-  background-image: url('https://www.pixel4k.com/wp-content/uploads/2018/10/polygon-mountains-minimalist-4k_1540752919.jpg');
+  background-image: url('https://wallpaper.dog/large/20476875.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
